Actions for user and for applying login and sign_up
No ramo v1.dev
Your branch is up to date with 'origin/v1.dev'.
Mudanças a serem submetidas:
-	new file:   app/assets/stylesheets/presentation/user.scss
-	new file:   app/controllers/presentation/user_controller.rb
-	new file:   app/helpers/presentation/user_helper.rb
-	modified:   app/models/user.rb
-	modified:   app/views/presentation/main/index.html.erb
-	new file:   app/views/presentation/user/login.html.erb
-	new file:   app/views/presentation/user/sign_up.html.erb
-	new file:   app/views/presentation/user/update.html.erb
-	modified:   config/routes.rb

--- a/app/views/presentation/main/index.html.erb
+++ b/app/views/presentation/main/index.html.erb
@@ -1,8 +1,8 @@
 <nav>
     <h1>Welcome to Slick</h1>
     <ul>
-        <li><%= link_to "Login", nil %></li>
-        <li><%= link_to "Sign up", nil%></li>
+        <li><%= link_to "Login", presentation_user_login_path %></li>
+        <li><%= link_to "Sign up", presentation_user_sign_up_path%></li>
     </ul>
 </nav>
 <p>That's right! Slick! The app is mine and I'm keeping the name.</p>
