Defining first layouts
No ramo v1.dev
Mudanças a serem submetidas:
-	new file:   app/assets/images/logos/slick-logo-sem-fundo-out.png
-	new file:   app/assets/images/logos/slick-logo-sem-fundo.png
-	new file:   app/assets/images/logos/slick-logo.png
-	new file:   app/assets/images/undraw_Selecting_team_re_ndkb.svg
-	new file:   app/assets/images/undraw_Updates_re_o5af.svg
-	modified:   app/controllers/messaging/messaging_controller.rb
-	modified:   app/javascript/packs/application.js
-	new file:   app/javascript/packs/messaging.js
-	new file:   app/javascript/packs/presentation/main.js
-	modified:   app/javascript/packs/presentation/user.js
-	modified:   app/javascript/presentation/user/login.js
-	new file:   app/javascript/stylesheets/application.scss
-	new file:   app/javascript/stylesheets/messaging.scss
--	new file:   app/javascript/stylesheets/slick-generics.scss
-	new file:   app/javascript/stylesheets/user/login-signup-generics.scss
-	new file:   app/javascript/stylesheets/user/login.scss
-	new file:   app/javascript/stylesheets/user/sign_up.scss
-	modified:   app/views/layouts/application.html.erb
-	new file:   app/views/layouts/messaging.html.erb
-	modified:   app/views/presentation/main/index.html.erb
-	modified:   app/views/presentation/user/login.html.erb
-	modified:   app/views/presentation/user/sign_up.html.erb
-	modified:   package.json
-	modified:   yarn.lock

--- a/app/views/presentation/main/index.html.erb
+++ b/app/views/presentation/main/index.html.erb
@@ -1,8 +1,19 @@
-<nav>
-    <h1>Welcome to Slick</h1>
-    <ul>
-        <li><%= link_to "Login", presentation_user_login_path %></li>
-        <li><%= link_to "Sign up", presentation_user_sign_up_path%></li>
-    </ul>
-</nav>
-<p>That's right! Slick! The app is mine and I'm keeping the name.</p>
+<header>
+    <nav>
+        <div class='project-name-logo'>
+            <%= image_tag 'logos/slick-logo-sem-fundo-out.png', width: 50 %>
+            <h1>Slick</h1>
+        </div>
+        <ul>
+            <li><%= link_to 'Login', presentation_user_login_path, class: 'btn btn-slick-success' %></li>
+            <li><%= link_to 'Sign up', presentation_user_sign_up_path, class: 'btn btn-slick-warning'%></li>
+        </ul>
+    </nav>
+    <p class="float-breaker"></p>
+</header>
+<section>
+    <!-- the content goes here -->
+</section>
+<footer>
+    Ismael Cesar
+</footer>
