--- a/app/views/presentation/user/login.html.erb
+++ b/app/views/presentation/user/login.html.erb
@@ -1,22 +1,24 @@
-<div>
-    <%= form_with model: @user, url: login_path do |f|%>
-        <div>
-          <div>
-              <%= f.label :email, 'Username'%>
-              <%= f.text_field :email, placeholder: 'user@email.com'%>
-          </div>
-          <div>
-              <%= f.label :password, 'Password'%>
-              <%= f.password_field :password, placeholder: 'Place your password here'%>
-          </div>
-        </div>
-        <div>
-          <%= f.button 'Cancel', type: 'reset' %>
-          <%= f.submit 'Login' %>
-        </div>
-        <div>
-            <%= f.button 'Sign up', id: 'sign-up' %>
-        </div>
-    <% end %>
+<div id="form-login-container" class="form-container">
+    <div class="fields-container">
+        <%= link_to root_path, class: 'link-to-root' do %>
+            <div class='project-name-logo'>
+                <%= image_tag 'logos/slick-logo-sem-fundo-out.png', width: 50 %>
+                <h1>Slick</h1>
+            </div>
+        <% end %>
+        <%= form_with model: @user, url: login_path, html: { class: 'form-login-signup' } do |f|%>
+            <div>
+            <div class="form-field">
+                <%= f.text_field :email, placeholder: 'user@email.com', required: true, class: 'form-control'%>
+            </div>
+            <div class="form-field">
+                <%= f.password_field :password, placeholder: 'Place your password here', required: true, class: 'form-control' %>
+            </div>
+            </div>
+            <div id="buttons-container">
+            <%= f.submit 'Login', class: 'btn btn-slick-success', id: 'btn-login' %>
+            <%= f.button 'Sign up', class: 'btn btn-slick-warning', id: 'btn-sign-up' %>
+            </div>
+        <% end %>
+    </div>
 </div>
-<%= javascript_pack_tag 'presentation/user' %>
