Polishing the way the login is made No ramo v1.dev Mudanças a serem submetidas: -	modified:   app/controllers/sessions_controller.rb -	modified:   app/javascript/messaging/contacts/index.js -	modified:   app/javascript/presentation/user/login.js -	modified:   app/views/layouts/messaging.html.erb -	modified:   app/views/messaging/contacts/index.html.erb -	modified:   app/views/presentation/user/login.html.erb

--- a/app/views/presentation/user/login.html.erb
+++ b/app/views/presentation/user/login.html.erb
@@ -1,5 +1,10 @@
 <div id="form-login-container" class="form-container">
     <div class="fields-container">
+        <% if @error_message %>
+            <div class="alert alert-danger" id="user-error-alert"> 
+                <%= @error_message %>
+            </div>
+        <% end %>
         <%= link_to root_path, class: 'link-to-root' do %>
             <div class='project-name-logo'>
                 <%= image_tag 'logos/slick-logo-sem-fundo-out.png', width: 50 %>
