--- a/app/views/layouts/messaging.html.erb
+++ b/app/views/layouts/messaging.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>  
-    <title> <%= current_user.name %>  </head>
+    <title> <%= current_user.name %>  </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <%= csrf_meta_tags %>
