--- a/app/views/presentation/user/login.html.erb
+++ b/app/views/presentation/user/login.html.erb
@@ -11,7 +11,7 @@
                 <h1>Slick</h1>
             </div>
         <% end %>
-        <%= form_with model: @user, url: login_path, html: { class: 'form-login-signup' } do |f|%>
+        <%= form_with scope: :user, url: login_path, html: { class: 'form-login-signup' } do |f|%>
             <div>
             <div class="form-field">
                 <%= f.text_field :email, placeholder: 'user@email.com', required: true, class: 'form-control'%>
