--- a/app/views/messaging/contacts/index.html.erb
+++ b/app/views/messaging/contacts/index.html.erb
@@ -1,35 +1,31 @@
-<section id="user-action">
-  <div style="display: none;">
-    <%#= link_to 'Make invite', messaging_new_user_invite_path,  id: 'btn-new-user-invite', remote: true %>
-    <%#= link_to 'List contacts', messaging_contacts_index_path,  id: 'btn-received-invites', remote: true %>
-    <%#= link_to 'Received invites', messaging_list_received_invites_path,  id: 'btn-received-invites', remote: true %>
-    <%#= link_to 'Pending invites', messaging_list_pending_invites_path,  id: 'btn-pending-invites', remote: true %>
-  </div>
+<section class="side-chat-menu">
+  <section id="user-actions">
+    <nav>
+      <ul>
+        <li>
+          <%= link_to '#', remote: true do %>
+              <i class="fas fa-user-clock"></i> Pending invites
+          <% end %>
+        </li>
+        <li>
+          <%= link_to '#', remote: true do %>
+              <i class="fas fa-envelope-open-text"></i> Received invites
+          <% end %>
+        </li>
+        <li>
+          <%= link_to messaging_new_user_invite_path, id: 'link-add-contact', remote: true do %>
+              <i class="fas fa-user-plus"></i> Add contact
+          <% end %>
+        </li>
+      </ul>
+    </nav>
+  </section>
+  <section class="listing-chats">
+    <%= render 'messaging/contacts/list_contacts', contacts: @user.contacts %>
+  </section>
+  <section id="modal-container">
+  </section>
 </section>
-<section id="user-actions">
-  <nav>
-    <ul>
-      <li>
-        <%= link_to '#', remote: true do %>
-            <i class="fas fa-user-clock"></i> Pending invites
-        <% end %>
-      </li>
-      <li>
-        <%= link_to '#', remote: true do %>
-            <i class="fas fa-envelope-open-text"></i> Received invites
-        <% end %>
-      </li>
-      <li>
-        <%= link_to messaging_new_user_invite_path, id: 'link-add-contact', remote: true do %>
-            <i class="fas fa-user-plus"></i> Add contact
-        <% end %>
-      </li>
-    </ul>
-  </nav>
-</section>
-<section id="listing-contacts">
-  <%= render 'messaging/contacts/list_contacts', contacts: @user.contacts %>
-</section>
-<section id="modal-container">
+<section class="chat-content">
 </section>
 <%= javascript_pack_tag "messaging/contacts" %>
