--- a/app/javascript/stylesheets/messaging.scss
+++ b/app/javascript/stylesheets/messaging.scss
@@ -15,6 +15,40 @@
 #messaging-content{
   float: right;
   width: 90%;
+  height: 100%;
   margin: 0;
 }
 
+.user-name { 
+  color: white; 
+  text-align: center;
+}
+
+.side-chat-menu{
+  width: 15em;
+  height: 100%;
+  #user-actions {
+    z-index: 1;
+    height: 30%;
+    box-shadow: 0 10px 5px #979797;
+    box-sizing: border-box;
+
+    ul { 
+      list-style-type: none;      
+      padding-top: 5%;
+      margin: auto;
+      li { 
+        margin-top: 15px;
+      }
+      li a { 
+        text-decoration: none;
+      }
+    }
+  }
+
+  .listing-chats {
+    background-color: $slick-dark-purple;
+    margin: 0;
+    height: 70%;
+  }
+}
