--- a/app/views/layouts/messaging.html.erb
+++ b/app/views/layouts/messaging.html.erb
@@ -17,4 +17,5 @@
   </body>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'%>
   <%= javascript_pack_tag 'messaging', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag "messaging/contacts", 'data-tubolinks-track': 'reload' %>
 </html>
