--- a/app/views/messaging/user_invites/list_pending.js.erb
+++ b/app/views/messaging/user_invites/list_pending.js.erb
@@ -1,6 +1,6 @@
 <% pending_invites = j render partial: 'messaging/user_invites/list_pending', locals: { pending_invites: pending_invites } %>
 (function (){
-  let listing_dashboard = document.querySelector('#listing-contacts')
+  let listing_dashboard = document.querySelector('#listing-chats')
   if(listing_dashboard){
     listing_dashboard.innerHTML = '<%= pending_invites %>'
   }
