--- a/app/views/presentation/main/index.html.erb
+++ b/app/views/presentation/main/index.html.erb
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <div class='project-name-logo'>
-            <%= image_tag 'logos/slick-logo-sem-fundo-out.png', width: 50 %>
+            <%= image_tag 'logos/logo-slick-upgrade.svg', width: 50 %>
             <h1>Slick</h1>
         </div>
         <ul>
