--- a/app/views/messaging/user_invites/list_received.js.erb
+++ b/app/views/messaging/user_invites/list_received.js.erb
@@ -1,6 +1,6 @@
 <% invites_list = j render partial: 'messaging/user_invites/list_received', locals: { received_invites: received_invites } %>
 (function (){
-  let listing_dashboard = document.querySelector('#listing-contacts')
+  let listing_dashboard = document.querySelector('#listing-chats')
   if(listing_dashboard){
     listing_dashboard.innerHTML = '<%= invites_list %>'
   }
