--- a/app/views/presentation/user/sign_up.html.erb
+++ b/app/views/presentation/user/sign_up.html.erb
@@ -2,7 +2,7 @@
   <div class="fields-container">
     <%= link_to root_path, class: 'link-to-root' do %>
       <div class='project-name-logo'>
-        <%= image_tag 'logos/slick-logo-sem-fundo-out.png', width: 50 %>
+        <%= image_tag 'logos/logo-slick-upgrade.svg', width: 50 %>
         <h1>Slick</h1>
       </div>
     <% end %>
