--- a/app/views/messaging/user_invites/_list_pending.html.erb
+++ b/app/views/messaging/user_invites/_list_pending.html.erb
@@ -1,5 +1,5 @@
-<table border="1px">
-  <thead>
+<table class='table table-hover'>
+  <thead class='table-primary'>
     <tr>
       <th> Name </th>
       <th> E-mail </th>
