--- a/app/views/messaging/chats/_list_chats.html.erb
+++ b/app/views/messaging/chats/_list_chats.html.erb
@@ -2,7 +2,7 @@
   <% if !chats.empty? %>
     <% chats.each do |chat|%>
       <li>
-        <%= link_to '#', 'data-turbolinks-track': 'reaload' do %>
+        <%= link_to messaging_show_chats_path(chat.id), remote: true, 'data-turbolinks-track': 'reaload', class: 'btn-select-chat' do %>
           <%= chat.contact.id == current_user.id  ? chat.user.name : chat.contact.name %> 
         <% end %>
       </li>
