--- a/app/views/messaging/chats/index.html.erb
+++ b/app/views/messaging/chats/index.html.erb
@@ -27,5 +27,5 @@
   </section>
 </section>
 <section class="messaging-chat-content">
-  <%= render 'messaging/messages/message_content'%>
+  <%#= render 'messaging/messages/message_content'%>
 </section>
