--- a/app/javascript/stylesheets/messaging/messages-list-container.scss
+++ b/app/javascript/stylesheets/messaging/messages-list-container.scss
@@ -4,6 +4,7 @@
 
 .messages-list-contaner{
   height: 100vh;
+  background-color: white;
   
   .messages-list-header{
     background-color: $slick-dark-purple;
@@ -21,7 +22,49 @@
   .messages-content-list{
     height: 70%;
     overflow: hidden;
-    scroll-behavior: smooth;
+    overflow: scroll;
+
+    // Message content styling
+    .message-content-container{
+      display: flex;
+      justify-content: space-between;      
+      width: 90%;
+      margin: 1.5em auto;
+      
+
+      .message-content{
+        width: 50em;
+        height: 30%;
+        padding: 1em;
+        border: 1px solid $slick-main-color;
+        //border-radius: 0px 30px 30px 30px;
+      }
+
+      .user-data .user-image {
+        font-size: 2em;
+        width: fit-content;
+        margin: auto;
+      }
+
+      .user-data .user-name{
+        color: black;
+      }      
+
+    }
+
+    .message-content-container.user-message{
+      .message-content{
+        border-radius: 30px 0px 30px 30px;
+      }
+    }
+
+    .message-content-container.contact-message{
+      flex-direction: row-reverse;
+      .message-content{
+        border-radius: 0px 30px 30px 30px;
+      }
+    }
+
   }
 
   .messages-list-text-form{
@@ -48,7 +91,7 @@
         border: 1px solid white;
       }
 
-      textarea{ 
+      input[type="text"]{ 
         width: 85%;
         border-radius: 30px 30px 30px 0px;
         border: 1px solid $slick-main-color;
