--- a/app/views/messaging/messages/_message_content.html.erb
+++ b/app/views/messaging/messages/_message_content.html.erb
@@ -10,7 +10,7 @@
   <section class="messages-list-text-form">
     <%= form_with method: :post, url: resource_url , id: 'form-message-content', html: { 'data-remote': true }  do |f| %>
       <%= f.hidden_field :user_id, value: current_user.id %>
-      <%= f.text_area :content, class: 'form-control' %>
+      <%= f.text_field :content, class: 'form-control', autocomplete: 'nope' %>
       <%= f.button class: 'btn', id: 'btn-send-message' do %>
           <i class="fas fa-paper-plane"></i>
       <% end %>
