--- a/app/views/messaging/user_invites/_form_new.html.erb
+++ b/app/views/messaging/user_invites/_form_new.html.erb
@@ -11,7 +11,7 @@
           </div>
         </div>
         <div class="modal-footer">
-            <%= f.submit 'Add', class: 'btn btn-success', id: 'add-new-contact' %>
+            <%= f.submit 'Add', class: 'btn btn-success', id: 'add-new-friend' %>
             <%= f.button 'Cancel', type: :reset, class: 'btn btn-danger', id: 'cancel-new-invite', 'data-bs-dismiss': 'modal'%>
         </div>
       <% end %>
