--- a/app/javascript/stylesheets/messaging.scss
+++ b/app/javascript/stylesheets/messaging.scss
@@ -8,7 +8,7 @@
   width: 10%; 
   height: 100vh;
   margin: 0;
-  box-shadow: 5px 0px 5px #f1f1f1;
+  box-shadow: 10px 0px 5px #c9c9c9;
   background-color: $slick-main-color;
   float: left;
 }
