--- a/app/views/layouts/messaging_partials/_side_menu.html.erb
+++ b/app/views/layouts/messaging_partials/_side_menu.html.erb
@@ -22,7 +22,7 @@
         <i class="fas fa-users"> </i> Contacts
       <% end %>
     </section>
-    <% @user.user_groups.each do |group| %>
+    <% @user.groups.each do |group| %>
       <section class="messaging-group">
         <%= link_to group do %> 
           <i class="fas fa-users"> </i> Contacts
@@ -35,7 +35,7 @@
         <i class="fas fa-search"></i>
       <% end %>
       <!-- <div class="group-item" title="Create group" data-toggle="tooltip"> -->
-      <%= link_to messaging_groups_user_grops_path , class: 'btn btn-sm btn-outline-light', 'data-toggle': 'tooltip' do %>
+      <%= link_to messaging_groups_user_groups_path , class: 'btn btn-sm btn-outline-light', 'data-toggle': 'tooltip' do %>
         <i class="fas fa-plus"></i>
       <% end %>
     </seciton>
