--- a/app/javascript/stylesheets/groups.scss
+++ b/app/javascript/stylesheets/groups.scss
@@ -5,4 +5,25 @@
   height: 100vh;
   width: 100%;
   background-color: $slick-dark-purple;
+
+  .group-option-list{ 
+    width: 75%;
+    margin: auto;
+    margin-top: 3em;
+    display: flex;
+  }
+
+  .group-data{
+    width: 10em;
+
+    .group-image{
+      font-size: 5em;
+      text-align: center;
+    }
+
+    .group-name{
+      text-align: center;
+    }
+  } 
+
 }
